Reduced unnecessary padding to avoid bad forms on mobile.

--- a/assets/css/partials/_form.scss
+++ b/assets/css/partials/_form.scss
@@ -10,7 +10,7 @@
 	vertical-align: middle;
 	position: relative;
 	z-index: 800;
-	padding: 0 60px;
+	padding: 0 10px;
 	text-align: center;
 	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
 }
